--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
-  #  - images/02.png
+  #  - images/demo02.png
   #  - images/03.png
   #  - images/04.png
   #  - images/a_dot_ham.jpeg
